Fix an issue where MuiPaper-root css was bleeding over to a different component

--- a/src/components/DisplayCard.scss
+++ b/src/components/DisplayCard.scss
@@ -1,9 +1,12 @@
-div.MuiPaper-root {
-    transition: transform 0.5s ease-in-out;
-}
+div.MuiGrid2-root {
 
-div.MuiPaper-root:hover {
-    transform: translate(5px, -5px);
+    div.MuiPaper-root {
+        transition: transform 0.5s ease-in-out;
+    }
+    
+    div.MuiPaper-root:hover {
+        transform: translate(5px, -5px);
+    }
 }
 
 .dark-mode {
